feat: adiciona SEO e estrutura de sitemap para melhorar a visibilidade do site

--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quero FIIs</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary SEO -->
+  <title>Quero FIAGROs – Compare Fundos de Investimento Agrícola (CRI/Agro) listados na B3</title>
+  <meta name="description"
+    content="Explore e compare FIAGROs listados na B3. Veja preço, Dividend Yield, P/VP e último rendimento de fundos de investimento agrícola como SNAG11, FGAA11, RZAG11 e mais. Atualizações em tempo real." />
+  <meta name="keywords"
+    content="FIAGRO, fundos agrícolas, FII agro, CRI agro, B3, investimento rural, SNAG11, FGAA11, RZAG11, AAGR11, dividend yield, renda passiva, fundos imobiliários do agronegócio" />
+  <meta name="author" content="Quero FIAGROs" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://querofiis.vercel.app/" />
+  <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+  <!-- Open Graph (Facebook / WhatsApp / LinkedIn) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="pt_BR" />
+  <meta property="og:site_name" content="Quero FIAGROs" />
+  <meta property="og:url" content="https://querofiis.vercel.app/" />
+  <meta property="og:title" content="Quero FIAGROs – Compare Fundos de Investimento Agrícola listados na B3" />
+  <meta property="og:description"
+    content="Explore FIAGROs em tempo real: preço, DY, P/VP e último rendimento. Filtre por setor, preço e dividend yield para montar sua carteira de renda passiva no agro." />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Quero FIAGROs – FIAGROs listados na B3 com DY e P/VP" />
+  <meta name="twitter:description"
+    content="Compare FIAGROs: preço, Dividend Yield e P/VP em tempo real. Dados diretos da B3 e fiagro.com.br." />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Quero FIAGROs",
+        "url": "https://querofiis.vercel.app/",
+        "description": "Plataforma para explorar e comparar FIAGROs (Fundos de Investimento no Agronegócio) listados na B3, com dados de preço, DY, P/VP e último rendimento.",
+        "applicationCategory": "FinanceApplication",
+        "inLanguage": "pt-BR",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "BRL"
+        },
+        "about": {
+          "@type": "Thing",
+          "name": "FIAGRO",
+          "description": "Fundos de Investimento no Agronegócio listados na B3"
+        }
+      }
+    </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
